Avoid FOUC on ZA person page tabs
Rather than duplicating styles (which just gives the CSS engine
more cruft to deal with) we just apply the classes that jQuery
UI will add, at pageload. Meaning the tabs are styled, but not
activated.

To keep everything accessible when JavaScript is disabled, all
of the tab panels are visible, until hidden by jQuery UI. This
still results in a flash of all four tabs before the last three
are hidden, but it’s worth it to maintain accessibility.

--- a/pombola/south_africa/static/sass/_south-africa_overrides.scss
+++ b/pombola/south_africa/static/sass/_south-africa_overrides.scss
@@ -1868,7 +1868,7 @@ ul.pager {
     .ui-tabs-nav {
         li {
           border: none;
-          margin: 0 1em 0 0;
+          margin: 0 1em 3px 0;
 
             a {
                 color: $colour_primary;
@@ -1892,6 +1892,7 @@ ul.pager {
 
         .ui-tabs-active {
             border-bottom: 3px solid $jquery_ui_tabs_border;
+            margin-bottom: 0;
 
             a {
                 color: inherit;
